loading cat image from api

--- a/src/App.css
+++ b/src/App.css
@@ -5,3 +5,11 @@
   height: 100vh;
   width: 100vw;
 }
+
+.App-body {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  width: 100%;
+  height: 100%;
+}
