--- a/src/App.css
+++ b/src/App.css
@@ -1,7 +1,7 @@
 .App {
   position: relative;
   overflow: hidden;
-  background: linear-gradient(190deg, #fdcd3b 66%, #ffed4b 33%);
+  background: linear-gradient(190deg, #0E5A33 66%, #02783C 33%);
   height: 100vh;
   width: 100vw;
 }
@@ -12,4 +12,67 @@
   justify-content: center;
   width: 100%;
   height: 100%;
+}
+
+.loader {
+  font-size: 10px;
+  margin: 50px auto;
+  text-indent: -9999em;
+  width: 100px;
+  height: 100px;
+  border-radius: 50%;
+  background: #ffffff;
+  background: linear-gradient(to right, #ffffff 10%, rgba(255, 255, 255, 0) 42%);
+  position: relative;
+  animation: load 1.4s infinite linear;
+  transform: translateZ(0);
+  transition: all 300ms ease-in;
+  opacity: 0.75;
+}
+
+.loader:before {
+  width: 50%;
+  height: 50%;
+  background: #ffffff;
+  border-radius: 100% 0 0 0;
+  position: absolute;
+  top: 0;
+  left: 0;
+  content: '';
+}
+
+.loader:after {
+  background: #0E5A33;
+  width: 50%;
+  height: 50%;
+  border-radius: 50%;
+  content: '';
+  margin: auto;
+  position: absolute;
+  top: 0;
+  left: 0;
+  bottom: 0;
+  right: 0;
+}
+
+@-webkit-keyframes load {
+  0% {
+    -webkit-transform: rotate(0deg);
+    transform: rotate(0deg);
+  }
+  100% {
+    -webkit-transform: rotate(360deg);
+    transform: rotate(360deg);
+  }
+}
+
+@keyframes load {
+  0% {
+    -webkit-transform: rotate(0deg);
+    transform: rotate(0deg);
+  }
+  100% {
+    -webkit-transform: rotate(360deg);
+    transform: rotate(360deg);
+  }
 }
