--- a/src/SwipeableImage.css
+++ b/src/SwipeableImage.css
@@ -1,12 +1,16 @@
 .Swipeable-image {
   max-width: 300px;
-  border: 4px solid pink;
+  background-color: rgba(0, 143, 70, 0.75);
+  padding: 12px;
 }
 
 .Swipeable-image img {
+  cursor: pointer;
   display: block;
   max-width: 100%;
   max-height: 400px;
   width: auto;
   height: auto;
+  transition: all 300ms ease-in;
+  opacity: 1;
 }
