--- a/src/SwipeableImage.css
+++ b/src/SwipeableImage.css
@@ -7,8 +7,8 @@
 .Swipeable-image img {
   cursor: pointer;
   display: block;
-  max-width: 100%;
-  max-height: 400px;
+  max-width: calc(100vw - 100px);
+  max-height: calc(100vh - 100px);
   width: auto;
   height: auto;
   transition: all 300ms ease-in;
